// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`On Mount Maches another snapshot 1`] = `
<div
  className="error"
  data-testid="error"
>
  Failed to load the api
</div>
`;

exports[`On Mount Matches a snapshot 1`] = `
<div
  className="error"
  data-testid="error"
>
  Error occured
</div>
`;
